lazy загрузка в журнале аутентификации

--- a/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-explorer.xhtml
@@ -5,7 +5,7 @@
 
     <ui:param name="_detailBean" value="#{numeratorPatternBean}" />  
 
-    <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('Numerators')}"/>
+    <ui:param name="_explorerHeader" value="#{_explorerBean.getLabelFromBundle('Numerators')}"/>
             
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.Create}" />
