--- a/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
@@ -9,8 +9,8 @@
     <ui:param name="_detailBean" value="#{departmentBean}" />
     <ui:param name="_searcheBean" value="#{companyBean}"/>
     
-    <ui:param name="_selectorHeader" value="#{explorerBean.getLabelFromBundle('CompanySelector')}"/>
-    <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('Companies')}"/>
+    <ui:param name="_selectorHeader" value="#{_explorerBean.getLabelFromBundle('CompanySelector')}"/>
+    <ui:param name="_explorerHeader" value="#{_explorerBean.getLabelFromBundle('Companies')}"/>
     
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.Create}" />            
