--- a/escom-bpm-web/src/main/webapp/view/companies/departaments/department-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/departaments/department-explorer.xhtml
@@ -10,8 +10,8 @@
     <ui:param name="_treeBean" value="#{departmentBean}"/> 
     <ui:param name="_searcheBean" value="#{_treeBean}"/>
     
-    <ui:param name="_selectorHeader" value="#{explorerBean.getLabelFromBundle('DepartmentSelector')}"/>
-    <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('Departaments')}"/>
+    <ui:param name="_selectorHeader" value="#{_explorerBean.getLabelFromBundle('DepartmentSelector')}"/>
+    <ui:param name="_explorerHeader" value="#{_explorerBean.getLabelFromBundle('Departaments')}"/>
     
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateCompany}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.CreateDepartament}" />
