--- a/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-explorer.xhtml
@@ -9,8 +9,8 @@
     <ui:param name="_detailBean"  value="#{statusesDocBean}" />
     <ui:param name="_searcheBean" value="#{statusesDocBean}"/>
     
-    <ui:param name="_selectorHeader" value="#{explorerBean.getLabelFromBundle('DocStatusesSelector')}"/>
-    <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('DocStatuses')}"/>    
+    <ui:param name="_selectorHeader" value="#{_explorerBean.getLabelFromBundle('DocStatusesSelector')}"/>
+    <ui:param name="_explorerHeader" value="#{_explorerBean.getLabelFromBundle('DocStatuses')}"/>    
     
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.CreateStatus}" />
