--- a/escom-bpm-web/src/main/webapp/view/folders/folder-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/folders/folder-explorer.xhtml
@@ -8,8 +8,8 @@
     <ui:param name="_detailBean" value="#{docsBean}" />
     <ui:param name="_searcheBean" value="#{_treeBean}"/>
     
-    <ui:param name="_selectorHeader" value="#{explorerBean.getLabelFromBundle('FolderSelector')}"/>
-    <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('FolderExplorer')}"/>
+    <ui:param name="_selectorHeader" value="#{_explorerBean.getLabelFromBundle('FolderSelector')}"/>
+    <ui:param name="_explorerHeader" value="#{_explorerBean.getLabelFromBundle('FolderExplorer')}"/>
     
     <ui:param name="_showAuthor"     value="#{true}"/>
     <ui:param name="_showDateCreate" value="#{true}"/>
