--- a/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-explorer.xhtml
@@ -9,8 +9,8 @@
     <ui:param name="_detailBean"  value="#{partnerTypesBean}"/>
     <ui:param name="_searcheBean" value="#{partnerTypesBean}"/>
     
-    <ui:param name="_selectorHeader" value="#{explorerBean.getLabelFromBundle('PartnerTypeSelector')}"/>
-    <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('PartnerTypes')}"/>
+    <ui:param name="_selectorHeader" value="#{_explorerBean.getLabelFromBundle('PartnerTypeSelector')}"/>
+    <ui:param name="_explorerHeader" value="#{_explorerBean.getLabelFromBundle('PartnerTypes')}"/>
     
     <ui:param name="_showAuthor"     value="#{true}"/>
     <ui:param name="_showDateCreate" value="#{true}"/>
