--- a/escom-bpm-web/src/main/webapp/view/staffs/posts/post-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/posts/post-explorer.xhtml
@@ -9,8 +9,8 @@
     <ui:param name="_detailBean"  value="#{postBean}" />
     <ui:param name="_searcheBean" value="#{postBean}"/>
     
-    <ui:param name="_selectorHeader" value="#{explorerBean.getLabelFromBundle('PostSelector')}"/>
-    <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('Posts')}"/>   
+    <ui:param name="_selectorHeader" value="#{_explorerBean.getLabelFromBundle('PostSelector')}"/>
+    <ui:param name="_explorerHeader" value="#{_explorerBean.getLabelFromBundle('Posts')}"/>   
     
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.CreatePost}" />
