--- a/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
@@ -21,14 +21,12 @@
                         <p:commandButton value="#{bundle.ExitNoSave}" style="float:right; padding-top: 3px;"
                                          title="#{bundle.ExitWithoutSaving}"
                                          action="#{_bean.onFinalCancelSave()}"
-                                         onclick="PF('confirm').hide();"
-                                         icon="ui-icon-circle-close">
+                                         onclick="PF('confirm').hide();">
                         </p:commandButton>
                         <p:spacer width="5" />
                         <p:commandButton value="#{bundle.Back}" style="float:right; padding-top: 3px;"
                                          title="#{bundle.GoBackCard}"
-                                         onclick="PF('confirm').hide();"
-                                         icon="ui-icon-arrowreturnthick-1-w">
+                                         onclick="PF('confirm').hide();">
                         </p:commandButton>
                     </f:facet>
                 </p:toolbar>
