--- a/escom-bpm-web/src/main/webapp/view/users/groupsUsers/usergroup-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/groupsUsers/usergroup-explorer.xhtml
@@ -8,8 +8,8 @@
     <ui:param name="_treeBean" value="#{userGroupsBean}" />
     <ui:param name="_searcheBean" value="#{_treeBean}"/>
 
-    <ui:param name="_selectorHeader" value="#{explorerBean.getLabelFromBundle('UserGroupSelector')}"/>
-    <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('UsersGroups')}"/>
+    <ui:param name="_selectorHeader" value="#{_explorerBean.getLabelFromBundle('UserGroupSelector')}"/>
+    <ui:param name="_explorerHeader" value="#{_explorerBean.getLabelFromBundle('UsersGroups')}"/>
 
     <ui:param name="_showAuthor"     value="#{true}"/>
     <ui:param name="_showDateCreate" value="#{false}"/>
