--- a/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
@@ -6,15 +6,14 @@
     <p:tab title="#{bundle.RightsForObject}" rendered="#{_bean.editedItem != null}">    
 
         <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding" >
-            <h:panelGroup styleClass="ui-grid-col-12" >
+            <p:panelGrid columns="2" columnClasses="ui-grid-col-1, ui-grid-col-11" styleClass="ui-grid-col-12" >
                 <p:selectBooleanCheckbox value="#{_bean.editedItem.inherits}"                                 
                                          disabled="#{_bean.isReadOnly() || !_bean.isHaveRightChangeRight()}"                                     
                                          valueChangeListener="#{_bean.onInheritsChange}">
                     <p:ajax update="groupRight inherits" process="@this" oncomplete="itemChange = 1;"/>                     
                 </p:selectBooleanCheckbox>
-                <p:spacer width="5"/>
                 <h:outputLabel id="inherits" value="#{_bean.inheritsRightName}"/>
-            </h:panelGroup>
+            </p:panelGrid>
 
             <h:panelGroup id="groupRight" style="font-size: 80%;">
                 <ui:repeat var="state" value="#{_bean.metadatesObj.statesList}" > 
