--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -122,31 +122,34 @@
                     <h:panelGrid columns="1" styleClass="without-spaces ui-grid-col-12">
                         <p:outputLabel value="#{bundle.Number}:" />  
                         <h:panelGroup id="regNumberPanel" styleClass="ui-grid-col-12 without-spaces">
-                            <p:inputText value="#{_item.regNumber}" id="number"
-                                        title="#{bundle.RegistredDocNumber}"
-                                        onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                                        rendered="#{_item.docType == null or _item.docType.numerator == null}"
-                                        disabled="#{_bean.isReadOnly()}"
-                                        onchange="return itemChange = 1;"
-                                        requiredMessage="#{bundle.Field} [#{bundle.Number}] #{bundle.MustBeFilled}"> 
-                            </p:inputText>
+                            <div class="ui-inputgroup">
+                                <p:inputText value="#{_item.regNumber}" id="number"
+                                            title="#{bundle.RegistredDocNumber}"
+                                            onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                            rendered="#{_item.docType == null or _item.docType.numerator == null}"
+                                            disabled="#{_bean.isReadOnly()}"
+                                            onchange="return itemChange = 1;"
+                                            update="clearNumberBtn"
+                                            requiredMessage="#{bundle.Field} [#{bundle.Number}] #{bundle.MustBeFilled}">
+                                </p:inputText>
 
-                            <p:inputMask mask="#{_bean.numberMask}" title="#{_item.docType.numerator.name}"
-                                         rendered="#{_item.docType != null and _item.docType.numerator != null}"
-                                         disabled="#{_bean.isReadOnly()}"
-                                         onchange="return itemChange = 1;"
-                                         requiredMessage="#{bundle.Field} [#{bundle.Number}] #{bundle.MustBeFilled}"
-                                         value="#{_item.regNumber}"/>
+                                <p:inputMask mask="#{_bean.numberMask}" title="#{_item.docType.numerator.name}"
+                                             rendered="#{_item.docType != null and _item.docType.numerator != null}"
+                                             disabled="#{_bean.isReadOnly()}"
+                                             onchange="return itemChange = 1;"
+                                             requiredMessage="#{bundle.Field} [#{bundle.Number}] #{bundle.MustBeFilled}"
+                                             value="#{_item.regNumber}"/>
 
-                            <p:commandButton icon="ui-icon-gear" title="#{bundle.Generate}"
-                                             disabled="#{_bean.isReadOnly() or !_bean.canRegistred}"
-                                             action="#{_bean.onGenerateRegNumber(_item)}"
-                                             update="docTypePanel datePanel сompanyPanel regNumberPanel"/>
-                            <p:commandButton id="clearNumberBtn"
-                                             icon="ui-icon-close" title="#{bundle.UnRegistred}"
-                                             update="docTypePanel datePanel сompanyPanel regNumberPanel"
-                                             actionListener="#{_bean.onClearRegNumber()}"
-                                             disabled="#{_bean.isReadOnly() or _bean.canRegistred}"/>
+                                <p:commandButton icon="ui-icon-gear" title="#{bundle.Generate}"
+                                                 disabled="#{_bean.isReadOnly() or !_bean.canRegistred}"
+                                                 action="#{_bean.onGenerateRegNumber(_item)}"
+                                                 update="docTypePanel datePanel сompanyPanel regNumberPanel"/>
+                                <p:commandButton id="clearNumberBtn"
+                                                 icon="ui-icon-close" title="#{bundle.UnRegistred}"
+                                                 update="docTypePanel datePanel сompanyPanel regNumberPanel"
+                                                 actionListener="#{_bean.onClearRegNumber()}"
+                                                 disabled="#{_bean.isReadOnly() or _bean.canRegistred}"/>
+                            </div>
                         </h:panelGroup>
                     </h:panelGrid>
 
