--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
@@ -8,19 +8,17 @@
         
     <ui:define name="page_body">
 
-        <p:focus for="name"/>
-        
         <p:tab title="#{bundle.Explorer}">     
             <p:panelGrid columns="1" layout="grid" styleClass="ui-grid-col-12 ui-panelgrid-blank"
                          columnClasses="ui-grid-col-12 col-padding" >
                 <p:outputLabel value="#{bundle.Name}" />
-                <p:inputText id="name" value="#{_bean.editedItem.name}" 
-                                 styleClass="ui-grid-col-12"
-                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                                 disabled="#{_bean.isReadOnly() or!_bean.isHaveRightEdit()}"
-                                 onchange="return itemChange = 1;"
-                                 required="#{param['isRequired'] == 'true'}"
-                                 requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
+                <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
+                             styleClass="ui-grid-col-12"
+                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                             disabled="#{_bean.isReadOnly() or!_bean.isHaveRightEdit()}"
+                             onchange="return itemChange = 1;"
+                             required="#{param['isRequired'] == 'true'}"
+                             requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
             </p:panelGrid>
         </p:tab>                
         <p:tab title="#{bundle.RightsChilds}">
