--- a/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-explorer.xhtml
@@ -8,8 +8,8 @@
     <ui:param name="_detailBean" value="#{partnersBean}" />
     <ui:param name="_searcheBean" value="#{_treeBean}"/>
     
-    <ui:param name="_selectorHeader" value="#{explorerBean.getLabelFromBundle('PartnerGroupsSelector')}"/>
-    <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('PartnerGroups')}"/>
+    <ui:param name="_selectorHeader" value="#{_explorerBean.getLabelFromBundle('PartnerGroupsSelector')}"/>
+    <ui:param name="_explorerHeader" value="#{_explorerBean.getLabelFromBundle('PartnerGroups')}"/>
     
     <ui:param name="_showAuthor"     value="#{true}"/>
     <ui:param name="_showDateCreate" value="#{false}"/>
