--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
@@ -12,8 +12,8 @@
     <ui:param name="_filterBean"  value="#{filtersBean}"/>     
     <ui:param name="_searcheBean" value="#{_detailBean}"/>
     
-    <ui:param name="_selectorHeader" value="#{explorerBean.getLabelFromBundle('StaffSelector')}"/>
-    <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('OrgStructureExplorer')}"/>
+    <ui:param name="_selectorHeader" value="#{_explorerBean.getLabelFromBundle('StaffSelector')}"/>
+    <ui:param name="_explorerHeader" value="#{_explorerBean.getLabelFromBundle('OrgStructureExplorer')}"/>
     
     <ui:param name="_showAuthor"     value="#{false}"/>
     <ui:param name="_showDateCreate" value="#{false}"/>
@@ -27,25 +27,25 @@
     <!-- специфичные колонки таблицы обозревателя для "Штатной единицы"-->
     <ui:define name="specDetailColumns">       
         <p:column headerText="#{bundle.Employee}" sortBy="#{item.employee.shortFIO}" 
-                  rendered="#{explorerBean.isNowShowDetail()}">
+                  rendered="#{_explorerBean.isNowShowDetail()}">
             #{item.employee.shortFIO}
         </p:column>
         <p:column headerText="#{bundle.Post}" sortBy="#{item.post.name}" 
-                  rendered="#{explorerBean.isNowShowDetail()}">
+                  rendered="#{_explorerBean.isNowShowDetail()}">
             #{item.post.name}
         </p:column>
     </ui:define> 
     
     <!-- специфичные колонки таблицы обозревателя для "Подразделения"-->
     <ui:define name="specTreeColumns"> 
-        <p:column headerText="#{bundle.Code}" sortBy="#{item.code}" rendered="#{explorerBean.isNowShowTree()}">
+        <p:column headerText="#{bundle.Code}" sortBy="#{item.code}" rendered="#{_explorerBean.isNowShowTree()}">
             #{item.code}
         </p:column>
     </ui:define>
     
     <!-- специфичные колонки таблицы обозревателя для "Компания"-->
     <ui:define name="specRootColumns"> 
-        <p:column headerText="#{bundle.Code}" sortBy="#{item.code}" rendered="#{explorerBean.isNowShowRoot()}">
+        <p:column headerText="#{bundle.Code}" sortBy="#{item.code}" rendered="#{_explorerBean.isNowShowRoot()}">
             #{item.code}
         </p:column>
     </ui:define>
@@ -58,7 +58,7 @@
                 <p:inputText title="#{bundle.HelpSearcheContext}" id="searchPost" widgetVar="searchPost"
                              styleClass="ui-grid-col-10"
                              placeholder="#{bundle.InputCreteriaForSearche}"
-                             value="#{explorerBean.model.postSearche}"
+                             value="#{_explorerBean.model.postSearche}"
                              onkeypress="keyPress();">
                 </p:inputText>
                 <p:commandButton styleClass="btnClear" icon="ui-icon-close" onclick="PF('searchPost').jq.val('');"/>
@@ -71,7 +71,7 @@
                 <p:inputText title="#{bundle.HelpSearcheContext}" id="searchSecondName" widgetVar="searchSecondName"
                              styleClass="ui-grid-col-10"
                              placeholder="#{bundle.InputCreteriaForSearche}"
-                             value="#{explorerBean.model.secondNameSearche}"
+                             value="#{_explorerBean.model.secondNameSearche}"
                              onkeypress="keyPress();">
                 </p:inputText>
                 <p:commandButton styleClass="btnClear" icon="ui-icon-close" onclick="PF('searchSecondName').jq.val('');"/>
