--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree-filters.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree-filters.xhtml
@@ -3,23 +3,23 @@
                  xmlns:p="http://primefaces.org/ui"
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
     
-    <p:tree id="filtersTree" value="#{explorerBean.filterTree}" var="filterItem"  
+    <p:tree id="filtersTree" value="#{_explorerBean.filterTree}" var="filterItem"  
             selectionMode="single" 
-            selection="#{explorerBean.filterSelectedNode}" style="width: 100%; overflow-y: auto;">
+            selection="#{_explorerBean.filterSelectedNode}" style="width: 100%; overflow-y: auto;">
 
-        <p:treeNode icon="#{filterItem.icon}" type="#{explorerBean.typeDetail}">
+        <p:treeNode icon="#{filterItem.icon}" type="#{_explorerBean.typeDetail}">
             <h:outputText value="#{filterItem.name}"/>
         </p:treeNode>
 
-        <p:treeNode icon="#{filterItem.icon}" type="#{explorerBean.typeOwner}">
+        <p:treeNode icon="#{filterItem.icon}" type="#{_explorerBean.typeOwner}">
             <h:outputText value="#{filterItem.name}"/>
         </p:treeNode>
         
-        <p:treeNode icon="#{filterItem.icon}" type="#{explorerBean.typeRoot}">
+        <p:treeNode icon="#{filterItem.icon}" type="#{_explorerBean.typeRoot}">
             <h:outputText value="#{filterItem.name}"/>
         </p:treeNode>
         
-        <p:ajax event="select" listener="#{explorerBean.onFilterTreeNodeSelect}" 
+        <p:ajax event="select" listener="#{_explorerBean.onFilterTreeNodeSelect}" 
                 update="#{_frmExpl} centerHeaderLabel #{_updates}"
                 oncomplete="initDND()"/>
     </p:tree> 
