--- a/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
@@ -15,8 +15,8 @@
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.CreateUser}" />
 
-    <ui:param name="_selectorHeader" value="#{explorerBean.getLabelFromBundle('UsersSelector')}"/>
-    <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('Users')}"/>
+    <ui:param name="_selectorHeader" value="#{_explorerBean.getLabelFromBundle('UsersSelector')}"/>
+    <ui:param name="_explorerHeader" value="#{_explorerBean.getLabelFromBundle('Users')}"/>
         
     <ui:define name="specDetailColumns" >
         <p:column headerText="#{bundle.Login}" sortBy="#{item.login}">
@@ -42,7 +42,7 @@
         <div class="ui-inputgroup">
             <p:inputText title="#{bundle.HelpSearcheContext}" id="searchLogin" widgetVar="searchLogin"
                          styleClass="ui-grid-col-10"
-                         value="#{explorerBean.model.searcheLogin}"
+                         value="#{_explorerBean.model.searcheLogin}"
                          placeholder="#{bundle.InputCreteriaForSearche}"
                          onkeypress="keyPress();">
             </p:inputText>
