--- a/escom-bpm-web/src/main/webapp/view/users/user-settings.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-settings.xhtml
@@ -38,7 +38,9 @@
                         <f:facet name="options">
                             <p:commandButton id="btnMake" icon="ui-icon-circle-check" value="#{bundle.ChangePassword}" 
                                          update="#{_frm}" 
-                                         actionListener="#{userSettingsBean.onChangePassword()}"/>
+                                         actionListener="#{userSettingsBean.onChangePassword()}">
+                                <f:param name="isRequired" value="true"/>
+                            </p:commandButton>
                             <p:spacer width="5" />
                             <p:commandButton id="btnClose" icon="ui-icon-circle-close" style="float:right;"
                                              immediate="true"
@@ -62,18 +64,18 @@
                         <p:spacer/>
                         <p:outputLabel value="#{bundle.CurrentPassword}:"/>
                         <p:password id="curPassword" value="#{userSettingsBean.oldPassword}"
-                                    required="true" requiredMessage="#{bundle.Field} [#{bundle.CurrentPassword}] #{bundle.MustBeFilled}"/>
+                                    required="#{param['isRequired'] == 'true'}" requiredMessage="#{bundle.Field} [#{bundle.CurrentPassword}] #{bundle.MustBeFilled}"/>
 
                         <p:outputLabel value="#{bundle.NewPassword}:"/>                        
                         <p:password value="#{userSettingsBean.newPassword}" id="newPassword"
                                     feedback="true" promptLabel="#{bundle.InputNewPassword}"
                                     goodLabel="#{bundle.Good}" weakLabel="#{bundle.Weak}" strongLabel="#{bundle.Strong}"
-                                    required="true" requiredMessage="#{bundle.Field} [#{bundle.NewPassword}] #{bundle.MustBeFilled}"/>
+                                    required="#{param['isRequired'] == 'true'}" requiredMessage="#{bundle.Field} [#{bundle.NewPassword}] #{bundle.MustBeFilled}"/>
 
                         <p:outputLabel value="#{bundle.RepeatPassword}:"/>                        
                         <p:password value="#{userSettingsBean.repeatePassword}" id="repeatePassword"
                                     goodLabel="#{bundle.Good}" weakLabel="#{bundle.Weak}" strongLabel="#{bundle.Strong}"
-                                    required="true" requiredMessage="#{bundle.Field} [#{bundle.RepeatPassword}] #{bundle.MustBeFilled}"/>
+                                    required="#{param['isRequired'] == 'true'}" requiredMessage="#{bundle.Field} [#{bundle.RepeatPassword}] #{bundle.MustBeFilled}"/>
                     </p:panelGrid>
                 </h:form>
             </pe:layoutPane>
